# qr-scanner-online

./: .eslintrc.js  .eslintrc.json  .gitignore  LICENSE  README.md  next-sitemap.js  package.json
.github/workflows/: main.yml
.storybook/: main.js
public/: robots.txt  sitemap.xml
src/components/: variables.ts
src/components/AlertList/: index.tsx
src/components/AlertList/_components/: ALert.tsx  Alert.tsx
src/components/CookieConsentBar/: index.tsx
src/components/Description/: Description.tsx  index.tsx
src/components/GAScripts/: index.tsx
src/components/Header/: Header.tsx  index.tsx
src/components/Layout/: index.tsx
src/components/PrivacyPolicy/: index.tsx
src/components/ResultCard/: index.tsx
src/components/Scanner/: index.tsx
src/components/Scanner/_components/InputPane/: Description.tsx  ImageCard.tsx  commonStyles.ts  index.tsx
src/components/Scanner/_components/OutputPane/: index.tsx
src/libs/: gtag.ts  store.ts  worker.js
src/libs/slices/: AlertSlice.ts  ImageCardSlice.ts
src/models/: CMakeLists.txt  Dockerfile  build.sh
src/models/src/: detect.cpp  detect.hpp
src/pages/: _app.tsx  index.tsx  policy.tsx
src/stories/: Alert.stories.tsx  Description.stories.tsx  Header.stories.tsx  InputPane.stories.tsx  OutputPane.stories.tsx  ResultCard.stories.tsx
src/styles/: Home.module.scss
